@@ -8,6 +8,8 @@ Fixes:
 	  (WEBCONSOLE-85)
   - Fixed: ImageProxy should return the requested url in the same format
     as it is stored rather than trying to convert it to PNG format (WEBCONSOLE-87)
+  - Fixed: Possible Null reference exception at startup trying
+    to determine the default console size (WEBCONSOLE-88)
 
 New features:
 
